# zotero-py

./: DOCKER.md  README.md  TODO.md  WONT_FIX.md  docker-compose.yml  init.sh  pyproject.toml  run_server.sh  test_sync.py  zoteroctl.py
zotero_server/: Dockerfile  auth.py  config.py  database.py  db.py  library.py  main.py  progress.md  schema_data.py
zotero_server/routers/: admin.py  collections.py  deleted.py  groups.py  items.py  keys.py  mappings.py  searches.py  settings.py  stubs.py  tags.py
